PP-0: Fix horizontal scroll issues.

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/block/_frontpage-calendar.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/block/_frontpage-calendar.scss
@@ -1,4 +1,7 @@
 .container.frontpage-calendar__container {
+  max-width: none;
+  padding-left: 0;
+  padding-right: 0;
   margin-top: $spacing-quadruple;
   margin-bottom: $spacing-quadruple;
 
@@ -12,8 +15,6 @@
   background-color: #f7f7f8;
   position: relative;
   margin-top: 50px;
-
-  @include breakout;
 
   .hds-koros {
     position: absolute;
