--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/block/_policymaker-listing.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/block/_policymaker-listing.scss
@@ -1,5 +1,4 @@
 .policymaker-listing {
-  @include breakout();
   background-color: #f7f7f8;
 
   .container {
